k8s/networkpolicy/slw-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: slw-dailycast-egress-policy
  namespace: sideline-wire-dailycast
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/part-of: slw-dailycast
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: sideline-wire-dailycast
      ports:
        - protocol: TCP
          port: 9000
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 4200
        - protocol: TCP
          port: 8000
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: log-anomaly
      ports:
        - protocol: TCP
          port: 5000
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
